--- a/Assignment0/AS0-Python_basics.ipynb
+++ b/Assignment0/AS0-Python_basics.ipynb
@@ -20,13 +20,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def bubblesort(arr):\n",
-    "    # YOUR CODE COMES HERE\n",
+    "    for i in range(len(arr) - 1, 0, -1) :\n",
+    "        for j in range(i) :\n",
+    "            if arr[j] > arr[j + 1] :\n",
+    "                arr[j], arr[j + 1] = arr[j + 1], arr[i]\n",
     "    return arr"
    ]
   },
@@ -34,7 +35,6 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
     "scrolled": false
    },
    "outputs": [
@@ -42,11 +42,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[20, 12, 11, 8, 3, 19, 9, 17, 10, 11, 0, 15, 20, 7, 3, 17, 5, 3, 19, 8]\n",
-      "[20, 12, 11, 8, 3, 19, 9, 17, 10, 11, 0, 15, 20, 7, 3, 17, 5, 3, 19, 8]\n",
+      "[0, 9, 11, 12, 2, 12, 9, 0, 4, 15, 17, 19, 18, 11, 5, 3, 12, 1, 18, 10]\n",
+      "[0, 0, 1, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10]\n",
       "\n",
       "Q: Is the array sorted?\n",
-      "A: False\n"
+      "A: True\n"
      ]
     }
    ],
@@ -74,10 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class Sorter:\n",
@@ -102,32 +100,54 @@
     "            raise ValueError('Unknown method: %s' % method)\n",
     "\n",
     "    def quicksort(self, arr):\n",
-    "        # YOUR CODE COMES HERE    \n",
-    "        return arr\n",
+    "        less = list()\n",
+    "        gt = list()\n",
+    "        eq = list()\n",
+    "        \n",
+    "        if len(arr) > 1 :\n",
+    "            p = arr[0]\n",
+    "            for e in arr :\n",
+    "                if e < p :\n",
+    "                    less.append(e)\n",
+    "                elif e > p :\n",
+    "                    gt.append(e)\n",
+    "                else :\n",
+    "                    eq.append(e)\n",
+    "                \n",
+    "            return self.quicksort(less) + eq + self.quicksort(gt)\n",
+    "        else :\n",
+    "            return arr\n",
     "    \n",
     "    def bubblesort(self, arr):\n",
-    "        # YOUR CODE COMES HERE       \n",
+    "        for i in range(len(arr) - 1, 0, -1) :\n",
+    "            for j in range(i) :\n",
+    "                if arr[j] > arr[j + 1] :\n",
+    "                    arr[j], arr[j + 1] = arr[j + 1], arr[i]\n",
     "        return arr\n",
     "    \n",
     "    def insertionsort(self, arr):\n",
-    "        # YOUR CODE COMES HERE\n",
+    "        for i in range(1, len(arr)): \n",
+    "            key = arr[i] \n",
+    "            j = i-1\n",
+    "            while j >= 0 and key < arr[j] : \n",
+    "                    arr[j + 1] = arr[j] \n",
+    "                    j -= 1\n",
+    "            arr[j + 1] = key \n",
     "        return arr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "quicksort sorted? False\n",
-      "bubblesort sorted? False\n",
-      "insertionsort sorted? False\n"
+      "quicksort sorted? True\n",
+      "bubblesort sorted? True\n",
+      "insertionsort sorted? True\n"
      ]
     }
    ],
@@ -144,9 +164,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -154,7 +179,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -168,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
