--- a/Assignment03/Practice_cnn/2_CNN_introduction.ipynb
+++ b/Assignment03/Practice_cnn/2_CNN_introduction.ipynb
@@ -1966,9 +1966,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:tf36]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-tf36-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
