Fix several bug

--- a/Assignment03/Assignment3/soeng.ipynb
+++ b/Assignment03/Assignment3/soeng.ipynb
@@ -56,7 +56,8 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "from utils.data_utils import load_CIFAR10, plot_images\n",
-    "import functools, random\n",
+    "import functools, random, numpy, sys, math\n",
+    "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (12.0, 6.0)\n",
     "plt.rcParams['image.interpolation'] = 'nearest'\n",
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +271,7 @@
     "    \n",
     "    layer_main_pool = new_pool_layer(input=Input, filter_size=3)\n",
     "    \n",
-    "    layer_dr_pool, weight_dr_pool = new_conv_layer(input=layer_main_pool,\n",
+    "    layer_dr_pool, weights_dr_pool = new_conv_layer(input=layer_main_pool,\n",
     "                                   num_input_channel=num_input_channel,\n",
     "                                   filter_size=1,\n",
     "                                   num_filters=P3_R,\n",
@@ -308,7 +309,7 @@
     "        self.prediction\n",
     "        self.optimize\n",
     "        self.error\n",
-    "        \n",
+    "\n",
     "    @lazy_property\n",
     "    def logits(self):\n",
     "        tmp_shape = self.data.get_shape().as_list()\n",
@@ -316,7 +317,7 @@
     "        input_width = tmp_shape[2]\n",
     "        num_input_channel = tmp_shape[3]\n",
     "        y_true_size = 10\n",
-    "                        \n",
+    "\n",
     "        layer, stem_weights_1 = new_conv_layer(input=self.data,\n",
     "                                               num_input_channel=num_input_channel,\n",
     "                                               filter_size=9,\n",
@@ -331,7 +332,7 @@
     "                                               use_pooling=False,\n",
     "                                               use_relu=True)\n",
     "        layer = new_pool_layer(input=layer, filter_size=3)\n",
-    "        for i in range(9) :\n",
+    "        for i in range(3) :\n",
     "            layer = Inception_module(Input=layer,C1=8, C3_R=3, C3=8, C5_R=3, C5=8, P3_R=3)\n",
     "        \n",
     "        layer_shape = layer.get_shape()\n",
@@ -339,6 +340,7 @@
     "        layer_flat = tf.reshape(layer, [-1, num_features])\n",
     "        W = new_weights([num_features, y_true_size])\n",
     "        b = new_biases([y_true_size])\n",
+    "\n",
     "        return tf.matmul(layer_flat, W)+b\n",
     "\n",
     "    @lazy_property    \n",
@@ -363,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +406,7 @@
     "    ##############################################################################\n",
     "    #                          IMPLEMENT YOUR CODE                               #\n",
     "    ##############################################################################\n",
-    "    else :\n",
+    "    else :      \n",
     "        err_accumulate = 0.0\n",
     "        for i in range(int(X.shape[0] / batch_size)) :\n",
     "            samplings = random.sample(sampling_list, batch_size)\n",
@@ -419,7 +421,7 @@
     "                         y_true : y_true_batch}\n",
     "\n",
     "            err_accumulate += session.run(model.error, feed_dict_train)\n",
-    "        \n",
+    "\n",
     "        error = err_accumulate / (X.shape[0] / batch_size)\n",
     "        return error, error\n",
     "    ##############################################################################\n",
@@ -430,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -438,13 +440,103 @@
      "output_type": "stream",
      "text": [
       "Training done!\n",
-      "(Loss, Accuracy) on Training Dataset (0.8994, 0.90)\n",
-      "(Loss, Accuracy) on Validataion Dataset (0.9023, 0.90)\n"
+      "[[0.09952828 0.10107107 0.10074716 0.10004575 0.09910876 0.09939545\n",
+      "  0.09980191 0.10032727 0.1001529  0.09982149]\n",
+      " [0.09949885 0.10108969 0.10085673 0.10016189 0.09888808 0.09951253\n",
+      "  0.0997231  0.10040198 0.10016836 0.0996988 ]\n",
+      " [0.09947907 0.10128129 0.10069492 0.10020499 0.09894659 0.09934206\n",
+      "  0.09979869 0.10040499 0.10013109 0.09971636]\n",
+      " [0.09955256 0.10108852 0.10085736 0.10006196 0.09910425 0.09936934\n",
+      "  0.09966581 0.10037402 0.10027008 0.09965613]\n",
+      " [0.09963842 0.10103009 0.10061704 0.10025533 0.09903514 0.09934447\n",
+      "  0.09987978 0.10026763 0.10012278 0.09980934]\n",
+      " [0.09957919 0.10108926 0.10070174 0.10016784 0.09910864 0.09943189\n",
+      "  0.09968778 0.10047015 0.10011427 0.09964924]\n",
+      " [0.09944922 0.10109551 0.10088551 0.10020467 0.09888699 0.09950796\n",
+      "  0.09965419 0.10041427 0.10017559 0.09972613]\n",
+      " [0.09947167 0.10099569 0.10068431 0.1002104  0.09909547 0.09941912\n",
+      "  0.0997237  0.1005435  0.10024755 0.09960859]\n",
+      " [0.09960058 0.10104336 0.10065834 0.10025456 0.0991029  0.09946222\n",
+      "  0.09969333 0.10039738 0.10006406 0.09972326]\n",
+      " [0.09964141 0.10099074 0.10070601 0.10019132 0.09900899 0.09946103\n",
+      "  0.09970908 0.10046813 0.10021653 0.09960677]\n",
+      " [0.09966119 0.10102797 0.10076085 0.10022461 0.09887263 0.09935448\n",
+      "  0.09970941 0.10026985 0.10034271 0.09977622]\n",
+      " [0.09962806 0.10110945 0.10077672 0.10026397 0.09900817 0.09924233\n",
+      "  0.09966169 0.10029773 0.1001915  0.09982044]\n",
+      " [0.09969071 0.10104063 0.10067834 0.100104   0.09898138 0.09949853\n",
+      "  0.09979592 0.10036926 0.10013024 0.09971094]\n",
+      " [0.09953835 0.10105406 0.10063261 0.10018292 0.09909932 0.09938972\n",
+      "  0.09981247 0.10042939 0.10024622 0.09961493]\n",
+      " [0.09950916 0.10092361 0.10080873 0.10021138 0.09898327 0.09948132\n",
+      "  0.09975224 0.10037156 0.10028916 0.09966958]\n",
+      " [0.09947078 0.10103457 0.10070428 0.10032859 0.09891277 0.09943027\n",
+      "  0.09984653 0.10046151 0.10011709 0.09969358]\n",
+      " [0.09934258 0.10111554 0.10078797 0.10020287 0.09892067 0.09944683\n",
+      "  0.09984864 0.10044527 0.10011414 0.09977543]\n",
+      " [0.09950928 0.10111234 0.1007366  0.10014409 0.09888322 0.09951962\n",
+      "  0.09971959 0.10055612 0.10005164 0.09976746]\n",
+      " [0.09947839 0.10111896 0.10064051 0.10029919 0.0989035  0.09947985\n",
+      "  0.09958436 0.10040181 0.10030616 0.09978724]\n",
+      " [0.09960556 0.10107172 0.10068501 0.10017999 0.09892356 0.09939001\n",
+      "  0.09967504 0.1005204  0.10005511 0.09989367]\n",
+      " [0.09959899 0.10110856 0.10070112 0.10008067 0.09906374 0.09935068\n",
+      "  0.09989654 0.10029402 0.10016902 0.09973674]\n",
+      " [0.09972624 0.1011052  0.10052068 0.10018791 0.09930027 0.09925825\n",
+      "  0.09975553 0.10020562 0.10021912 0.09972121]\n",
+      " [0.09934287 0.10107674 0.10074781 0.10013974 0.09898162 0.09949049\n",
+      "  0.09962664 0.10037602 0.10036729 0.09985079]\n",
+      " [0.09947934 0.10100371 0.10079426 0.10027331 0.09884311 0.09953048\n",
+      "  0.09983373 0.10019293 0.10034839 0.09970076]\n",
+      " [0.09951665 0.10092024 0.10087074 0.10024008 0.09899718 0.0994328\n",
+      "  0.09964476 0.10028931 0.10022244 0.09986582]\n",
+      " [0.09949253 0.10109857 0.10077086 0.10025695 0.09888096 0.09948643\n",
+      "  0.09944696 0.100393   0.10035692 0.09981676]\n",
+      " [0.09960794 0.10102461 0.10074165 0.10019665 0.09900054 0.09939316\n",
+      "  0.09971378 0.10033014 0.10030974 0.09968187]\n",
+      " [0.09974452 0.10095444 0.100674   0.10010255 0.09902028 0.09937102\n",
+      "  0.09983474 0.10014642 0.10017733 0.09997472]\n",
+      " [0.09961106 0.10129959 0.10056937 0.10017785 0.09891937 0.09945816\n",
+      "  0.099728   0.10051722 0.1000141  0.09970531]\n",
+      " [0.0994756  0.10101905 0.1006975  0.10024237 0.0989909  0.09941158\n",
+      "  0.09975073 0.1004265  0.10026821 0.09971755]]\n",
+      "[[0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 1. 0. 0. 0. 0. 0.]]\n",
+      "(Loss, Accuracy) on Training Dataset (0.9000, 0.90)\n",
+      "(Loss, Accuracy) on Validataion Dataset (0.8981, 0.90)\n"
      ]
     }
    ],
    "source": [
-    "# Clear old variables\n",
+    "### Clear old variables\n",
     "tf.reset_default_graph()    \n",
     "\n",
     "# Declare out simple model\n",
@@ -457,6 +549,21 @@
     "with tf.Session(config=conf) as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
     "    run_model(sess, model, X_train, Y_train, is_training=True, epochs=10)\n",
+    "    \n",
+    "    sampling_list = range(X_train.shape[0])\n",
+    "    samplings = random.sample(sampling_list, 30)\n",
+    "\n",
+    "    x_batch = X_train[samplings]\n",
+    "    y_cls_batch = Y_train[samplings]\n",
+    "\n",
+    "    y_true_batch = tf.one_hot(indices=y_cls_batch, depth=10).eval()\n",
+    "\n",
+    "    feed_dict_train = {x: x_batch,\n",
+    "                 y_true : y_true_batch}\n",
+    "\n",
+    "    print(sess.run(model.prediction, feed_dict_train))\n",
+    "    print(y_true_batch)\n",
+    "\n",
     "    print(\"(Loss, Accuracy) on Training Dataset (%.4f, %.2f)\" % run_model(sess, model, X_train, Y_train))\n",
     "    print(\"(Loss, Accuracy) on Validataion Dataset (%.4f, %.2f)\" % run_model(sess, model, X_val, Y_val))"
    ]
