feat: Implement for 70% acc model

--- a/Assignment03/Assignment3/seong.ipynb
+++ b/Assignment03/Assignment3/seong.ipynb
@@ -344,6 +344,9 @@
     "\n",
     "    if is_training:        \n",
     "        for i in range(epochs):\n",
+    "            import datetime\n",
+    "            time1 = datetime.datetime.now()\n",
+    "\n",
     "            sampling_list = list(range(X.shape[0]))\n",
     "            for j in range(int(X.shape[0] / batch_size)) :\n",
     "                samplings = random.sample(sampling_list, batch_size)\n",
@@ -364,6 +367,9 @@
     "            # Error test\n",
     "            print(\"Complete %d epoch\" % (i + 1))\n",
     "            print(\"current batch's loss and accuracy: %f %f\" % (session.run(model.cost, feed_dict_train), session.run(model.accuracy, feed_dict_train)))\n",
+    "            \n",
+    "            time2 = datetime.datetime.now()\n",
+    "            print(time2 - time1)\n",
     "\n",
     "        print(\"Training done!\")\n",
     "\n",
@@ -467,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -483,24 +489,32 @@
     "        num_input_channel = 3\n",
     "        y_true_size = 10\n",
     "\n",
-    "        layer, stem_weights_1 = new_conv_layer(input=self.data,\n",
+    "        layer, _ = new_conv_layer(input=self.data,\n",
     "                                               num_input_channel=num_input_channel,\n",
-    "                                               filter_size=5,\n",
-    "                                               num_filters=64,\n",
-    "                                               use_pooling=False,\n",
-    "                                               use_relu=True)\n",
-    "    \n",
-    "        layer = new_pool_layer(input=layer, filter_size=3)\n",
-    "        layer = tf.nn.lrn(layer, 4, bias=1.0, alpha=0.001 / 9.0, beta=0.75)\n",
-    "        \n",
-    "        layer, stem_weights_1 = new_conv_layer(input=layer,\n",
-    "                                               num_input_channel=64,\n",
-    "                                               filter_size=5,\n",
+    "                                               filter_size=3,\n",
     "                                               num_filters=32,\n",
     "                                               use_pooling=False,\n",
     "                                               use_relu=True)\n",
-    "\n",
-    "        layer = tf.nn.lrn(layer, 4, bias=1.0, alpha=0.001 / 9.0, beta=0.75)\n",
+    "        layer, _ = new_conv_layer(input=layer,\n",
+    "                                               num_input_channel=32,\n",
+    "                                               filter_size=3,\n",
+    "                                               num_filters=32,\n",
+    "                                               use_pooling=False,\n",
+    "                                               use_relu=True)\n",
+    "        layer = new_pool_layer(input=layer, filter_size=3)\n",
+    "        \n",
+    "        layer, _ = new_conv_layer(input=layer,\n",
+    "                                               num_input_channel=32,\n",
+    "                                               filter_size=3,\n",
+    "                                               num_filters=64,\n",
+    "                                               use_pooling=False,\n",
+    "                                               use_relu=True)\n",
+    "        layer, _ = new_conv_layer(input=layer,\n",
+    "                                               num_input_channel=64,\n",
+    "                                               filter_size=3,\n",
+    "                                               num_filters=64,\n",
+    "                                               use_pooling=False,\n",
+    "                                               use_relu=True)\n",
     "        layer = new_pool_layer(input=layer, filter_size=3)\n",
     "\n",
     "        layer = Inception_module(Input=layer,C1=8, C3_R=3, C3=8, C5_R=3, C5=8, P3_R=3)\n",
@@ -516,7 +530,13 @@
     "\n",
     "        cross_entropy = tf.nn.softmax_cross_entropy_with_logits_v2(logits=self.logits, labels=self.target)\n",
     "        self.cost = tf.reduce_mean(cross_entropy)\n",
-    "        self.optimize = tf.train.GradientDescentOptimizer(learning_rate=0.01).minimize(self.cost)\n",
+    "        \n",
+    "        global_step = tf.Variable(0, trainable=False)\n",
+    "        starter_learning_rate = 0.1\n",
+    "        learning_rate = tf.train.exponential_decay(starter_learning_rate, global_step,\n",
+    "                                                   100000, 0.96, staircase=True)\n",
+    "\n",
+    "        self.optimize = tf.train.GradientDescentOptimizer(learning_rate=learning_rate).minimize(self.cost, global_step=global_step)\n",
     "        \n",
     "        correct = tf.equal(tf.argmax(self.target, 1), tf.argmax(self.prediction, 1))\n",
     "        self.accuracy = tf.reduce_mean(tf.cast(correct, tf.float32))"
@@ -524,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {
     "scrolled": false
    },
@@ -534,48 +554,98 @@
      "output_type": "stream",
      "text": [
       "Complete 1 epoch\n",
-      "current batch's loss and accuracy: 1.916252 0.334000\n",
+      "current batch's loss and accuracy: 2.136798 0.258000\n",
+      "0:00:14.197561\n",
       "Complete 2 epoch\n",
-      "current batch's loss and accuracy: 1.737881 0.388000\n",
+      "current batch's loss and accuracy: 1.817308 0.344000\n",
+      "0:00:14.641858\n",
       "Complete 3 epoch\n",
-      "current batch's loss and accuracy: 1.632914 0.442000\n",
+      "current batch's loss and accuracy: 1.650988 0.402000\n",
+      "0:00:15.501008\n",
       "Complete 4 epoch\n",
-      "current batch's loss and accuracy: 1.517684 0.472000\n",
+      "current batch's loss and accuracy: 1.639727 0.386000\n",
+      "0:00:16.457383\n",
       "Complete 5 epoch\n",
-      "current batch's loss and accuracy: 1.434046 0.492000\n",
+      "current batch's loss and accuracy: 1.482970 0.460000\n",
+      "0:00:17.438287\n",
       "Complete 6 epoch\n",
-      "current batch's loss and accuracy: 1.345051 0.510000\n",
+      "current batch's loss and accuracy: 1.515896 0.456000\n",
+      "0:00:18.297424\n",
       "Complete 7 epoch\n",
-      "current batch's loss and accuracy: 1.395754 0.494000\n",
+      "current batch's loss and accuracy: 1.364250 0.510000\n",
+      "0:00:19.150431\n",
       "Complete 8 epoch\n",
-      "current batch's loss and accuracy: 1.274445 0.546000\n",
+      "current batch's loss and accuracy: 1.324846 0.532000\n",
+      "0:00:20.061642\n",
       "Complete 9 epoch\n",
-      "current batch's loss and accuracy: 1.191197 0.592000\n",
+      "current batch's loss and accuracy: 1.248207 0.556000\n",
+      "0:00:20.936162\n",
       "Complete 10 epoch\n",
-      "current batch's loss and accuracy: 1.264979 0.534000\n",
+      "current batch's loss and accuracy: 1.111434 0.612000\n",
+      "0:00:21.774531\n",
       "Complete 11 epoch\n",
-      "current batch's loss and accuracy: 1.313351 0.548000\n",
+      "current batch's loss and accuracy: 1.093415 0.594000\n",
+      "0:00:22.707702\n",
       "Complete 12 epoch\n",
-      "current batch's loss and accuracy: 1.296449 0.520000\n",
+      "current batch's loss and accuracy: 1.063485 0.636000\n",
+      "0:00:23.640610\n",
       "Complete 13 epoch\n",
-      "current batch's loss and accuracy: 1.294513 0.544000\n",
+      "current batch's loss and accuracy: 0.947238 0.660000\n",
+      "0:00:26.266823\n",
       "Complete 14 epoch\n",
-      "current batch's loss and accuracy: 1.285513 0.556000\n",
+      "current batch's loss and accuracy: 1.254376 0.562000\n",
+      "0:00:30.291237\n",
       "Complete 15 epoch\n",
-      "current batch's loss and accuracy: 1.215483 0.558000\n",
+      "current batch's loss and accuracy: 0.940746 0.666000\n",
+      "0:00:31.070404\n",
       "Complete 16 epoch\n",
-      "current batch's loss and accuracy: 1.170588 0.590000\n",
+      "current batch's loss and accuracy: 0.797158 0.738000\n",
+      "0:00:31.851872\n",
       "Complete 17 epoch\n",
-      "current batch's loss and accuracy: 1.136299 0.584000\n",
+      "current batch's loss and accuracy: 0.882524 0.708000\n",
+      "0:00:32.742938\n",
       "Complete 18 epoch\n",
-      "current batch's loss and accuracy: 1.108705 0.596000\n",
+      "current batch's loss and accuracy: 0.843545 0.676000\n",
+      "0:00:33.598747\n",
       "Complete 19 epoch\n",
-      "current batch's loss and accuracy: 1.097069 0.616000\n",
+      "current batch's loss and accuracy: 0.797803 0.730000\n",
+      "0:00:34.369346\n",
       "Complete 20 epoch\n",
-      "current batch's loss and accuracy: 1.038091 0.654000\n",
+      "current batch's loss and accuracy: 0.823336 0.718000\n",
+      "0:00:34.998052\n",
+      "Complete 21 epoch\n",
+      "current batch's loss and accuracy: 0.712673 0.744000\n",
+      "0:00:35.526274\n",
+      "Complete 22 epoch\n",
+      "current batch's loss and accuracy: 0.743114 0.718000\n",
+      "0:00:36.445358\n",
+      "Complete 23 epoch\n",
+      "current batch's loss and accuracy: 0.785550 0.726000\n",
+      "0:00:37.340852\n",
+      "Complete 24 epoch\n",
+      "current batch's loss and accuracy: 0.717041 0.748000\n",
+      "0:00:38.500421\n",
+      "Complete 25 epoch\n",
+      "current batch's loss and accuracy: 0.705264 0.748000\n",
+      "0:00:39.459080\n",
+      "Complete 26 epoch\n",
+      "current batch's loss and accuracy: 0.592781 0.798000\n",
+      "0:00:40.430175\n",
+      "Complete 27 epoch\n",
+      "current batch's loss and accuracy: 0.726736 0.728000\n",
+      "0:00:41.691058\n",
+      "Complete 28 epoch\n",
+      "current batch's loss and accuracy: 0.619066 0.798000\n",
+      "0:00:42.597320\n",
+      "Complete 29 epoch\n",
+      "current batch's loss and accuracy: 0.613149 0.800000\n",
+      "0:00:43.602255\n",
+      "Complete 30 epoch\n",
+      "current batch's loss and accuracy: 0.552086 0.806000\n",
+      "0:00:44.529599\n",
       "Training done!\n",
-      "(Loss, Accuracy) on Training Dataset (1.0793, 0.61)\n",
-      "(Loss, Accuracy) on Validataion Dataset (1.1441, 0.60)\n"
+      "(Loss, Accuracy) on Training Dataset (0.6838, 0.77)\n",
+      "(Loss, Accuracy) on Validataion Dataset (0.9328, 0.70)\n"
      ]
     }
    ],
@@ -589,7 +659,7 @@
     "# Now, create a tf.Session and train the model\n",
     "with tf.Session(config=conf) as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
-    "    run_model(sess, model, X_train, Y_train, is_training=True, epochs=20)\n",
+    "    run_model(sess, model, X_train, Y_train, is_training=True, epochs=30)\n",
     "    print(\"(Loss, Accuracy) on Training Dataset (%.4f, %.2f)\" % run_model(sess, model, X_train, Y_train))\n",
     "    print(\"(Loss, Accuracy) on Validataion Dataset (%.4f, %.2f)\" % run_model(sess, model, X_val, Y_val))\n",
     "    \n",
@@ -623,18 +693,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /home/snulife/Documents/KJH/ML/ML_3.6/lib/python3.6/site-packages/tensorflow/python/training/saver.py:1266: checkpoint_exists (from tensorflow.python.training.checkpoint_management) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Use standard file APIs to check for files with this prefix.\n",
       "INFO:tensorflow:Restoring parameters from ./model_checkpoints/my_model_final\n",
-      "(Loss, Accuracy) on Test Dataset (1.1277, 0.59)\n"
+      "(Loss, Accuracy) on Test Dataset (0.8965, 0.70)\n"
      ]
     }
    ],
