Add 82% source code

--- a/Assignment03/Assignment3/Assignment3-Copy3.ipynb
+++ b/Assignment03/Assignment3/Assignment3-Copy3.ipynb
@@ -64,7 +64,8 @@
     "plt.rcParams['image.cmap'] = 'gray'\n",
     "    \n",
     "conf = tf.ConfigProto()\n",
-    "conf.gpu_options.per_process_gpu_memory_fraction = 0.2\n",
+    "# conf.gpu_options.per_process_gpu_memory_fraction = 0.2\n",
+    "conf.gpu_options.allow_growth = True\n",
     "os.environ['CUDA_VISIBLE_DEVICES'] = '0'"
    ]
   },
@@ -549,6 +550,7 @@
     "                               ksize=[1, 3, 3, 1],\n",
     "                               strides=[1, 2, 2, 1],\n",
     "                               padding='SAME')\n",
+    "        layer = tf.nn.lrn(layer, 4, bias=1.0, alpha=0.001 / 9.0, beta=0.75)\n",
     "        layer, _ = new_conv_layer(input=layer,\n",
     "                                               num_input_channel=32,\n",
     "                                               filter_size=3,\n",
@@ -563,12 +565,18 @@
     "                                               use_pooling=False,\n",
     "                                               use_relu=True,\n",
     "                                               use_bn=True)\n",
+    "        layer = tf.nn.lrn(layer, 4, bias=1.0, alpha=0.001 / 9.0, beta=0.75)\n",
     "        layer = tf.nn.max_pool(value=layer,\n",
     "                               ksize=[1, 3, 3, 1],\n",
     "                               strides=[1, 2, 2, 1],\n",
     "                               padding='SAME')\n",
     "\n",
     "        layer = Inception_module(Input=layer,C1=8, C3_R=3, C3=8, C5_R=3, C5=8, P3_R=3)\n",
+    "        \n",
+    "        #layer = tf.nn.avg_pool(value=layer,\n",
+    "        #                       ksize=[1,7,7,1],\n",
+    "        #                       strides=[1,1,1,1],\n",
+    "        #                       padding='VALID')\n",
     "        \n",
     "        layer_shape = layer.get_shape()\n",
     "        num_features = layer_shape[1:4].num_elements()\n",
@@ -586,13 +594,13 @@
     "        lossL2 = tf.add_n([tf.nn.l2_loss(v) for v in all_vars if 'bias' not in v.name])\n",
     "        self.costL2 = self.cost + lossL2 * 0.01\n",
     "        \n",
-    "        global_step = tf.Variable(0, trainable=False)\n",
-    "        starter_learning_rate = 0.005\n",
-    "        learning_rate = tf.train.exponential_decay(starter_learning_rate, global_step,\n",
-    "                                                   100000, 0.96, staircase=True)\n",
+    "        #global_step = tf.Variable(0, trainable=False)\n",
+    "        #starter_learning_rate = 0.005\n",
+    "        #learning_rate = tf.train.exponential_decay(starter_learning_rate, global_step,\n",
+    "        #                                           100000, 0.96, staircase=True)\n",
     "\n",
     "        #self.optimize = tf.train.GradientDescentOptimizer(learning_rate=learning_rate).minimize(self.costL2, global_step=global_step)\n",
-    "        self.optimize = tf.train.AdamOptimizer(learning_rate = learning_rate).minimize(self.costL2)\n",
+    "        self.optimize = tf.train.AdamOptimizer(learning_rate = 0.003).minimize(self.costL2)\n",
     "        \n",
     "        correct = tf.equal(tf.argmax(self.target, 1), tf.argmax(self.prediction, 1))\n",
     "        self.accuracy = tf.reduce_mean(tf.cast(correct, tf.float32))"
@@ -600,87 +608,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From /home/snulife/Documents/KJH/ML/ML_3.6/lib/python3.6/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "Colocations handled automatically by placer.\n",
-      "\n",
-      "WARNING: The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
-      "For more information, please see:\n",
-      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
-      "  * https://github.com/tensorflow/addons\n",
-      "If you depend on functionality not listed there, please file an issue.\n",
-      "\n",
       "Augumentation done! size is 80000\n",
       "Complete 1 epoch\n",
-      "current batch's loss and accuracy: 0.879486 0.704000\n",
-      "0:00:43.623407\n",
+      "current batch's loss and accuracy: 1.111963 0.614000\n",
+      "0:00:44.411785\n",
       "Complete 2 epoch\n",
-      "current batch's loss and accuracy: 0.783615 0.718000\n",
-      "0:00:45.102086\n",
+      "current batch's loss and accuracy: 0.826407 0.702000\n",
+      "0:00:41.489427\n",
       "Complete 3 epoch\n",
-      "current batch's loss and accuracy: 0.777056 0.726000\n",
-      "0:00:48.938131\n",
+      "current batch's loss and accuracy: 0.778670 0.730000\n",
+      "0:00:41.672295\n",
       "Complete 4 epoch\n",
-      "current batch's loss and accuracy: 0.796352 0.734000\n",
-      "0:00:52.570407\n",
+      "current batch's loss and accuracy: 0.650514 0.778000\n",
+      "0:00:41.943728\n",
       "Complete 5 epoch\n",
-      "current batch's loss and accuracy: 0.673531 0.754000\n",
-      "0:00:57.314310\n",
+      "current batch's loss and accuracy: 0.589999 0.800500\n",
+      "0:00:42.084038\n",
       "Complete 6 epoch\n",
-      "current batch's loss and accuracy: 0.637364 0.772000\n",
-      "0:01:01.244380\n",
+      "current batch's loss and accuracy: 0.580778 0.803000\n",
+      "0:00:42.590895\n",
       "Complete 7 epoch\n",
-      "current batch's loss and accuracy: 0.743338 0.734000\n",
-      "0:01:06.454734\n",
+      "current batch's loss and accuracy: 0.529880 0.828500\n",
+      "0:00:42.439789\n",
       "Complete 8 epoch\n",
-      "current batch's loss and accuracy: 0.614822 0.788000\n",
-      "0:01:11.073001\n",
+      "current batch's loss and accuracy: 0.522863 0.809500\n",
+      "0:00:42.638572\n",
       "Complete 9 epoch\n",
-      "current batch's loss and accuracy: 0.581264 0.808000\n",
-      "0:01:15.806952\n",
+      "current batch's loss and accuracy: 0.437381 0.851000\n",
+      "0:00:43.050359\n",
       "Complete 10 epoch\n",
-      "current batch's loss and accuracy: 0.613830 0.782000\n",
-      "0:01:21.537478\n",
+      "current batch's loss and accuracy: 0.473952 0.842000\n",
+      "0:00:43.234051\n",
       "Complete 11 epoch\n",
-      "current batch's loss and accuracy: 0.620509 0.768000\n",
-      "0:01:26.797857\n",
+      "current batch's loss and accuracy: 0.441353 0.851500\n",
+      "0:00:43.307780\n",
       "Complete 12 epoch\n",
-      "current batch's loss and accuracy: 0.660696 0.770000\n",
-      "0:01:32.960602\n",
+      "current batch's loss and accuracy: 0.451512 0.842500\n",
+      "0:00:43.553065\n",
       "Complete 13 epoch\n",
-      "current batch's loss and accuracy: 0.511597 0.806000\n",
-      "0:01:38.396712\n",
+      "current batch's loss and accuracy: 0.432029 0.858500\n",
+      "0:00:43.741683\n",
       "Complete 14 epoch\n",
-      "current batch's loss and accuracy: 0.612165 0.808000\n",
-      "0:01:40.185969\n",
+      "current batch's loss and accuracy: 0.426066 0.862500\n",
+      "0:00:44.184998\n",
       "Complete 15 epoch\n",
-      "current batch's loss and accuracy: 0.616943 0.804000\n",
-      "0:01:37.667350\n",
+      "current batch's loss and accuracy: 0.380354 0.877000\n",
+      "0:00:44.156511\n",
       "Complete 16 epoch\n",
-      "current batch's loss and accuracy: 0.613338 0.792000\n",
-      "0:01:43.122682\n",
+      "current batch's loss and accuracy: 0.367523 0.885000\n",
+      "0:00:44.625455\n",
       "Complete 17 epoch\n",
-      "current batch's loss and accuracy: 0.590248 0.804000\n",
-      "0:01:49.328707\n",
+      "current batch's loss and accuracy: 0.420038 0.858000\n",
+      "0:00:44.868812\n",
       "Complete 18 epoch\n",
-      "current batch's loss and accuracy: 0.609263 0.796000\n",
-      "0:01:55.570378\n",
+      "current batch's loss and accuracy: 0.386928 0.866000\n",
+      "0:00:44.905049\n",
       "Complete 19 epoch\n",
-      "current batch's loss and accuracy: 0.610714 0.794000\n",
-      "0:02:01.772160\n",
+      "current batch's loss and accuracy: 0.343216 0.884000\n",
+      "0:00:45.163189\n",
       "Complete 20 epoch\n",
-      "current batch's loss and accuracy: 0.664888 0.776000\n",
-      "0:02:08.425124\n",
+      "current batch's loss and accuracy: 0.411586 0.851500\n",
+      "0:00:45.462113\n",
+      "Complete 21 epoch\n",
+      "current batch's loss and accuracy: 0.357063 0.883000\n",
+      "0:00:45.611139\n",
+      "Complete 22 epoch\n",
+      "current batch's loss and accuracy: 0.348609 0.883500\n",
+      "0:00:46.008973\n",
+      "Complete 23 epoch\n",
+      "current batch's loss and accuracy: 0.335517 0.895000\n",
+      "0:00:46.129604\n",
+      "Complete 24 epoch\n",
+      "current batch's loss and accuracy: 0.358322 0.883000\n",
+      "0:00:46.685606\n",
+      "Complete 25 epoch\n",
+      "current batch's loss and accuracy: 0.362913 0.878000\n",
+      "0:00:46.924496\n",
+      "Complete 26 epoch\n",
+      "current batch's loss and accuracy: 0.352347 0.881500\n",
+      "0:00:47.125587\n",
+      "Complete 27 epoch\n",
+      "current batch's loss and accuracy: 0.349536 0.890000\n",
+      "0:00:47.560957\n",
+      "Complete 28 epoch\n",
+      "current batch's loss and accuracy: 0.349787 0.889000\n",
+      "0:00:47.774564\n",
+      "Complete 29 epoch\n",
+      "current batch's loss and accuracy: 0.321662 0.902000\n",
+      "0:00:48.081143\n",
+      "Complete 30 epoch\n",
+      "current batch's loss and accuracy: 0.350594 0.882500\n",
+      "0:00:48.117747\n",
       "Training done!\n",
-      "(Loss, Accuracy) on Training Dataset (0.6579, 0.77)\n",
-      "(Loss, Accuracy) on Validataion Dataset (0.7205, 0.76)\n"
+      "(Loss, Accuracy) on Training Dataset (0.3211, 0.88)\n",
+      "(Loss, Accuracy) on Validataion Dataset (0.4473, 0.82)\n"
      ]
     }
    ],
@@ -694,7 +722,7 @@
     "# Now, create a tf.Session and train the model\n",
     "with tf.Session(config=conf) as sess:\n",
     "    sess.run(tf.global_variables_initializer())\n",
-    "    run_model(sess, model, X_train, Y_train, is_training=True, epochs=20, aug=True)\n",
+    "    run_model(sess, model, X_train, Y_train, is_training=True, epochs=30, aug=True, batch_size=2000)\n",
     "    print(\"(Loss, Accuracy) on Training Dataset (%.4f, %.2f)\" % run_model(sess, model, X_train, Y_train))\n",
     "    print(\"(Loss, Accuracy) on Validataion Dataset (%.4f, %.2f)\" % run_model(sess, model, X_val, Y_val))\n",
     "    \n",
@@ -728,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -739,12 +767,12 @@
       "Instructions for updating:\n",
       "Use standard file APIs to check for files with this prefix.\n",
       "INFO:tensorflow:Restoring parameters from ./model_checkpoints/my_model_final\n",
-      "(Loss, Accuracy) on Test Dataset (0.6900, 0.76)\n"
+      "(Loss, Accuracy) on Test Dataset (0.4813, 0.82)\n"
      ]
     }
    ],
    "source": [
-    "# Clear old variables\n",
+    "### Clear old variables\n",
     "tf.reset_default_graph()  \n",
     "\n",
     "with tf.Session(config=conf) as sess:\n",
@@ -754,13 +782,6 @@
     "    saver.restore(sess, \"./model_checkpoints/my_model_final\")\n",
     "    print(\"(Loss, Accuracy) on Test Dataset (%.4f, %.2f)\" % run_model(sess, model, X_test, Y_test))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
